force-app/main/default/objects/Contact/fields/Duplicated_External_Ids__c.field-meta.xml
<CustomField>
    <fullName>Duplicated_External_Ids__c</fullName>
    <formula>&quot;Volgistics Ids: &quot; &amp; Duplicated_Volgistics_Ids__c &amp; BR()&amp;
&quot;Person Ids: &quot; &amp; Duplicated_Person_Ids__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Ids</label>
    <type>Text</type>
</CustomField>