force-app/main/default/objects/Contact/fields/Duplicated_Person_Ids__c.field-meta.xml
<CustomField>
    <fullName>Duplicated_Person_Ids__c</fullName>
    <label>Person Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>